# ollama_client

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
examples/: agentic_loop.rs  basic.rs  custom_tool.rs  embeddings.rs  gemma_tools.rs  model_info.rs  multi_turn.rs  plan_and_execute.rs  pull_model.rs  streaming.rs  supervisor_workflow.rs  tool_calling.rs
ollama_client_macros/: Cargo.toml
ollama_client_macros/src/: lib.rs
src/: lib.rs  macros.rs  telemetry.rs  tools.rs  types.rs
src/agentic/: mod.rs  multi_agent.rs  planning.rs  rag.rs  test_support.rs  tool_runtime.rs
