[package]
name = "ollama_client_rs"
version = "0.1.0"
edition = "2021"
description = "A Rust client for Ollama API with agentic and tooling support"
license = "MIT"

[features]
default = []
tracing = ["dep:tracing"]

[dependencies]
async-trait = { version = "0.1", default-features = false }
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "stream",
  "rustls-tls"
] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false }
thiserror = { version = "2", default-features = false }
tokio = { version = "1", default-features = false, features = [
  "macros",
  "rt-multi-thread",
] }
tracing = { version = "0.1", default-features = false, optional = true }

[dev-dependencies]
dotenvy = "0.15"
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "fmt",
  "registry",
] }
