[package]
name = "ollama_client_rs"
version = "0.4.0"
edition = "2021"
description = "A Rust SDK for the Ollama API with model-aware tool calling, streaming, and embeddings"
license = "MIT"
repository = "https://github.com/Adriftdev/ollama_client"
keywords = ["ollama", "llm", "ai", "tool-calling", "streaming"]
categories = ["api-bindings", "asynchronous"]

[features]
default = []
tracing = ["dep:tracing"]

[dependencies]
ollama_client_macros = { path = "ollama_client_macros", version = "0.1.0" }
async-stream = { version = "0.3", default-features = false }
async-trait = { version = "0.1", default-features = false }
futures-util = { version = "0.3", default-features = false }
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "stream",
  "rustls-tls"
] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false }
thiserror = { version = "2", default-features = false }
tokio = { version = "1", default-features = false, features = [
  "macros",
  "rt-multi-thread",
] }
tracing = { version = "0.1", default-features = false, optional = true }

[dev-dependencies]
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "fmt",
  "registry",
] }

[workspace]
members = [".", "ollama_client_macros"]
