[package]
name = "ollama_client_macros"
version = "0.1.0"
edition = "2021"
description = "Procedural macros for ollama_client_rs"
license = "MIT"
repository = "https://github.com/Adriftdev/ollama_client"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
proc-macro2 = "1.0"
serde_json = "1"
